Things are working

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,25 +8,31 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-
-[env:uno]
+[env:nano]
 platform = atmelavr
-board = uno
+board = nanoatmega328
 framework = arduino
-monitor_speed = 57600
 
-; [env:atmega328pb]
-; platform = atmelavr
-; board = ATmega328PB
-; framework = arduino
-; ;monitor_speed = 57600
+monitor_speed = 9600
 
-; ; using internal clock, max 8MHz
-; board_hardware.oscillator = internal
-; board_build.f_cpu = 8000000L
+;[env:atmega328pb]
+;platform = atmelavr
+;board = ATmega328PB
+;framework = arduino
+;monitor_speed = 57600
 
-; ; using Sparkfun's pocket programmer
-; upload_protocol = usbtiny
+; using internal clock, 8MHz with clock divider
+;board_hardware.oscillator = internal
+;board_build.f_cpu = 1000000L    ; tells compiler to set F_CPU
 
-; ; clock failure detection
-; ;board_hardware.cfd = yes
+; Check these!!
+;board_fuses.lfuse = 0x62        ; 0xE2 = internal oscillator, 8MHz, 0x62 = internal, 1MHz, E0 = external slow rising
+;board_fuses.hfuse = 0xD9
+;board_fuses.efuse = 0xF7
+
+; using Sparkfun's pocket programmer
+;upload_protocol = usbtiny
+;upload_flags = -e
+
+; clock failure detection
+;board_hardware.cfd = yes
