--- a/platformio.ini
+++ b/platformio.ini
@@ -8,31 +8,22 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nano]
+
+[env:328pb]
 platform = atmelavr
-board = nanoatmega328
+board = ATmega328PB
 framework = arduino
 
-monitor_speed = 9600
+monitor_speed = 57600
 
-;[env:atmega328pb]
-;platform = atmelavr
-;board = ATmega328PB
-;framework = arduino
-;monitor_speed = 57600
+upload_protocol = usbtiny
+upload_flags = -e
 
-; using internal clock, 8MHz with clock divider
 ;board_hardware.oscillator = internal
-;board_build.f_cpu = 1000000L    ; tells compiler to set F_CPU
+;board_build.f_cpu = 1000000L
 
-; Check these!!
-;board_fuses.lfuse = 0x62        ; 0xE2 = internal oscillator, 8MHz, 0x62 = internal, 1MHz, E0 = external slow rising
+board_hardware.oscillator = external
+board_build.f_cpu = 7372800L
+;board_fuses.lfuse = 0x65        ; 0xE2 = internal oscillator, 8MHz, 0x62 = internal, 1MHz, E0 = external slow rising
 ;board_fuses.hfuse = 0xD9
 ;board_fuses.efuse = 0xF7
-
-; using Sparkfun's pocket programmer
-;upload_protocol = usbtiny
-;upload_flags = -e
-
-; clock failure detection
-;board_hardware.cfd = yes
