Add GIT_REV macro

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-
 [env:328pb]
 platform = atmelavr
 board = ATmega328PB
@@ -27,3 +26,9 @@ board_build.f_cpu = 7372800L
 ;board_fuses.lfuse = 0x65        ; 0xE2 = internal oscillator, 8MHz, 0x62 = internal, 1MHz, E0 = external slow rising
 ;board_fuses.hfuse = 0xD9
 ;board_fuses.efuse = 0xF7
+
+;extra_scripts = 
+;  pre:pre_extra_script.py
+build_flags = !python git_rev_macro.py
+
+;build_flags = -D VERSION=13
