--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,14 @@ framework = arduino
 
 monitor_speed = 19200
 
-upload_protocol = usbtiny
+;upload_protocol = usbtiny
+;upload_flags = -e
+
+; Pololu programmer
+upload_protocol = stk500v2
 upload_flags = -e
+upload_port = /dev/cu.usbmodem003564172
+upload_speed = 115200
 
 ;board_hardware.oscillator = internal
 ;board_build.f_cpu = 1000000L
